# Data-Formating_TO_Data-Mining

./: CMakeLists.txt
src/: main.cpp
src/db/: MySQL.cpp  MySQL.hpp
src/stringOp/: StringOp.cpp  StringOp.hpp
src/system/: SystemCommand.cpp  SystemCommand.hpp
